<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.fimbleenterprises.torquepidcaster.presentation.ui.main.MainFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_choose_pids"
        android:name="com.fimbleenterprises.torquepidcaster.presentation.ui.choosepids.ChoosePidsFragment"
        android:label="@string/title_choosepids"
        tools:layout="@layout/fragment_choose_pids" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.fimbleenterprises.torquepidcaster.presentation.ui.settings.SettingsFragment"
        android:label="@string/menu_title_settings"
        tools:layout="@layout/fragment_blank" />
</navigation>