<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/txtServiceStatusLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/service_status"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtServiceStatusValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/processing"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/txtTorqueStatusLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/torque_status"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtTorqueStatusValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/processing"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/txtEcuStatusLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ecu_status"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtEcuStatusValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/processing"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/txtWakelockStatusLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wakelock_status"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtWakelockStatusValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/processing"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/txtLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_glass_gray_black_border_toggle_orange_on"
            android:padding="5dp"
            android:text="@string/log_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtLog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_glass"
            android:text="@string/waiting_for_broadcast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLog" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>